# WRO-Future-Simulation

./: README.md  install_gz_harmonic.sh  install_humble.sh  model.config  model.sdf
documentation/: follow_the_gap.md
mrbuggy3_gz_bringup/: CMakeLists.txt  package.xml
mrbuggy3_gz_bringup/config/: ros_gz_bridge.yaml
mrbuggy3_gz_bringup/launch/: gz_nav2.launch.py  odom_to_tf.launch.py  robot_sim.launch.py
mrbuggy3_gz_bringup/rviz/: rviz.rviz
mrbuggy3_gz_bringup/scripts/: odom_to_tf_publisher.py
mrbuggy3_gz_resource/: CMakeLists.txt
mrbuggy3_gz_resource/models/mrbuggy3/: model.config  model.sdf  model.sdf.bkb
mrbuggy3_gz_resource/models/wro_env/: model.sdf
mrbuggy3_gz_resource/models/wro_env_no_obstacles/: model.sdf
mrbuggy3_gz_resource/worlds/: default.sdf  wro_no_obstacle.sdf
robot_controllers/: CMakeLists.txt  package.xml
robot_controllers/launch/: ftg.launch.py  ftg_launch.py  ftg_python.launch.py  ftg_python.launch_basic.py  ftg_python.launch_dr.py
robot_controllers/scripts/: ftg_node.py  ftg_node_basic.py  ftg_node_dr.py
robot_controllers/src/: ftg_node.cpp
robot_perception/: CMakeLists.txt  package.xml  setup.py
robot_perception/launch/: perception.launch.py
robot_perception/robot_perception/: lap_counter_node.py  lidar2image_node.py  rgb_to_bgr_converter.py  teleop_to_robot_controller.py
robot_perception/src/: lidar2image_node.cpp  rgb_to_bgr_converter.cpp
robot_system/: CMakeLists.txt  package.xml
robot_system/launch/: robot_system.launch.py  robot_system.py  test_system.launch.py
robot_system/rviz/: actual.rviz
robot_system/urdf/: wro.materials.xacro  wro_actual.urdf.xacro
wro_firmware/: CMakeLists.txt  package.xml  setup.cfg  setup.py
wro_firmware/firmware/: motor_steer_dr.ino  motor_steer_kh.ino
wro_firmware/launch/: car_controller.launch.py
wro_firmware/src/: car_controller.cpp
wro_firmware/wro_firmware/: car_controller.py  motor_steer_dr.py  motor_steer_kh.py
